<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sanket.padaayi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_letters"
        android:name="com.sanket.padaayi.ui.letters.LettersFragment"
        android:label="@string/menu_letters"
        tools:layout="@layout/fragment_letters" />

    <fragment
        android:id="@+id/nav_words"
        android:name="com.sanket.padaayi.ui.words.WordsFragment"
        android:label="@string/menu_words"
        tools:layout="@layout/fragment_words" />

    <fragment
        android:id="@+id/nav_tests"
        android:name="com.sanket.padaayi.ui.tests.TestsFragment"
        android:label="@string/menu_tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.sanket.padaayi.ui.aboutus.AboutUs"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_aboutus" />

</navigation>