<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tests.tests.Test2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingBottom="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/title1"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad1"
                android:layout_marginTop="40dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen1"/>

                    <EditText
                        android:id="@+id/an1"
                        android:layout_below="@+id/im1"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad2"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen2"/>

                    <EditText
                        android:id="@+id/an2"
                        android:layout_below="@+id/im2"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad3"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen3"/>

                    <EditText
                        android:id="@+id/an3"
                        android:layout_below="@+id/im3"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad4"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen4"/>

                    <EditText
                        android:id="@+id/an4"
                        android:layout_below="@+id/im4"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad5"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen5"/>

                    <EditText
                        android:id="@+id/an5"
                        android:layout_below="@+id/im5"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad6"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen6"/>

                    <EditText
                        android:id="@+id/an6"
                        android:layout_below="@+id/im6"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad7"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen7"/>

                    <EditText
                        android:id="@+id/an7"
                        android:layout_below="@+id/im7"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad8"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen8"/>

                    <EditText
                        android:id="@+id/an8"
                        android:layout_below="@+id/im8"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad9"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen9"/>

                    <EditText
                        android:id="@+id/an9"
                        android:layout_below="@+id/im9"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad10"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen10"/>

                    <EditText
                        android:id="@+id/an10"
                        android:layout_below="@+id/im10"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad11"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen11"/>

                    <EditText
                        android:id="@+id/an11"
                        android:layout_below="@+id/im11"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cad12"
                android:layout_marginTop="60dp"
                android:elevation="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/im12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sen12"/>

                    <EditText
                        android:id="@+id/an12"
                        android:layout_below="@+id/im12"
                        android:hint="@string/answer_box"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/sub1"
                android:elevation="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/submit"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>